# DeepLOB-HFT-Bot

./: .gitignore  CMakeLists.txt  README.md  bot.cpp  data_ingest.py  enhanced_trade_analysis.csv  model.py  preprocess_balanced.py  requirements.txt  strategy_server.py  trade_log.csv  train.py
